gobmkida/g3/new_semeai
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/new_semeai/src/engine/semeai.c:659:44: error: use of undeclared identifier 'xmmword_4B0890'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4B0890); 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/new_semeai/src/obj/1/semeai.o] Error 1
